--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo-list",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://yourusername.github.io/todo-list",
+  "homepage": "https://shlok-shinde.github.io/todo-list",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
